Added object referencing and made most of the ui functional

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <% include partials/header %>
 
-<div class="container">
-    <h1>Welcome</h1>
-    <p>Welcome to StoryBooks 1.0.0</p>
-    <p>Post stories from the best and worst of your life and choose for them to be read by the world or completely private as your own personal diary</p>
-    <a href="/auth/google" class="btn red darken-1"><i class="fab fa-google" style="font-size:16px; margin-right:5px;"></i>Login With Google</a>
-</div>
+<main>
+    <div class="container">
+        <h1>Welcome</h1>
+        <p>Welcome to StoryBooks 1.0.0</p>
+        <p>Post stories from the best and worst of your life and choose for them to be read by the world or completely private as your own personal diary</p>
+        <a href="/auth/google" class="btn red darken-1"><i class="fab fa-google" style="font-size:16px; margin-right:5px;"></i>Login With Google</a>
+    </div>
+</main>
 
 
 <% include partials/footer %>
