--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,9 @@
 
 <main>
     <div class="container">
-        <h3> Welcome User: <%= user.firstName %> </h3>
+        <h1>About</h1>
+        <p>Version 1.0.0</p>
+        <p>StoryBooks is an app to share your life</p>
     </div>
 </main>
 
