--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -1,7 +1,47 @@
 <% include ../partials/header %>
-
 <main>
-    <h1>Edit</h1>
+    <div class="container">
+        <h1>Add Stories </h1>
+        <div class="row">
+            <form action="/stories/<%= story.id %>?_method=PUT" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field">
+                        <input type="text" name="title" value="<%= story.title %>">
+                        <label for="title">Title</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field">
+                        <select name="status">
+                            <option value="public">Public</option>
+                            <option value="private">Private</option>
+                            <option value="unpublished">Unpublished</option>
+                        </select> 
+                        <label for="status">Status</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <p>
+                        <label>
+                            <input name="allowComments" type="checkbox" class="filled-in" <% if(story.allowComments){ %> checked="checked" <% } %> />
+                            <span>Allow Comments</span>
+                        </label>
+                    </p>
+                </div>
+
+                <div class="row">
+                    <div class="input-field">
+                        <h5>Tell Us Your Story</h5>
+                        <textarea name="body"><%= story.body %></textarea>
+                    </div>
+                </div>
+
+                <input type="submit" value="Save" class="btn">
+            </form>
+        </div>
+    </div>
 </main>
 
 <% include ../partials/footer %>
